Aligned version with internal developments.
rev-id 50f8cc05b7594ed2894b639aaf28f502f35f2534